--- a/Interface-Web-MQTT-master/InterfaceWeb.html
+++ b/Interface-Web-MQTT-master/InterfaceWeb.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title> YOO-TI </title>
+<title> Proj Embarcados </title>
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -28,8 +28,8 @@
 <div id="publish">
     <br>
 	<font color="#3D3D3F"><b>1º passo:</b></font> definir os tópicos MQTT de subscribe e publish:
-	<p>Tópico de envio de informações: <input class="txt" id="pub-topic-text" type="text" value="ProjEmbarcadosEnvia"></p>
-	<p>Tópico de recepcao de informações: <input class="txt" id="pub-subscribe-text" type="text" value="ProjEmbarcadosRecebe"></p>
+	<p>Tópico de envio de informações: <input class="txt" id="pub-topic-text" type="text" value=""></p>
+	<p>Tópico de recepcao de informações: <input class="txt" id="pub-subscribe-text" type="text" value=""></p>
 	<br>
 	
 	<!--<input class="but" id="liga-output" type="button"    value="  Ligar "><br><br>
